ALINE - I HOPE FINAL CHANGES

--- a/Pages/Events.html
+++ b/Pages/Events.html
@@ -38,14 +38,7 @@
             </nav>
         </header>
         <div class="content">
-
             <main>
-
-                <section id="participate">
-                    <h2>Want to Participate?</h2>
-                    <p>If any of the events interest you, please contact us and give us your details so we know we can count on your presence!</p></br>
-                    <p><a href="../Pages/contact.html">Contact Us</a></p></br>
-                </section>
                 <section id="events">
                     <h2>Upcoming Events</h2>
 
@@ -55,7 +48,8 @@
                         <p class="location">Clubhouse Theatre</p>
                         <p class="description">Join us for a full-day marathon featuring classic horror films such as
                             <i>Psycho</i>, <i>The Shining</i>, and <i>Night of the Living Dead</i>. Themed snacks and
-                            drinks will be provided!</p>
+                            drinks will be provided!
+                        </p>
                     </div>
 
                     <div class="event">
@@ -92,13 +86,22 @@
                     </div>
                 </section>
 
+                <section id="participate">
+                    <h2>Want to Participate?</h2>
+                    <p>If any of the events interest you, please contact us and give us your details so we know we can
+                        count on your presence!</p>
+                    <button class="button"><a href="../Pages/contact.html">Contact us</a></button>
+                </section>
+
                 <section id="map">
                     <h2>Club Headquarters</h2>
                     <img src="../Images/map-to-college.png" alt="a map giving directions to Griffith College Cork">
                     <p>Griffith College Cork, Wellington Road, Cork, Co. Cork, T23 DF3A</p>
                 </section>
-            </main>
                 
+            </main>
+            <button onclick="topFunction()" id="myBottonTop" title="Go to top">Top</button>
+
             <!-- Footer section -->
             <footer>
                 <p>&copy; 2024 Designed by Aline - 3144929 | Eros - 3151957 | Sergio - 3139115</p>
