--- a/Pages/Quiz.html
+++ b/Pages/Quiz.html
@@ -126,15 +126,15 @@
                             <img src="../Images/images-quiz/aline-catwoman.jpeg" alt="Aline dressed as catwoman">
                         </div>
                         <div class="gallery-item">
-                            <img src="../Images/images-quiz/aline-sergio-catwoman_zombie.jpeg"
-                                alt="Aline as catwoman stepping on Sergio, who is dressed as a zombie">
+                            <img src="../Images/images-quiz/diaba.jpg"
+                                alt="Aline as devil">
                         </div>
                         <div class="gallery-item">
-                            <img src="../Images/images-quiz/aline-sergio_evilpeterpan.jpeg"
-                                alt="Sergio as Peter Pan and Aline as Wendy, in a twisted version of the original story">
+                            <img src="../Images/images-quiz/dead.jpg"
+                                alt="Sergio as skull">
                         </div>
                         <div class="gallery-item">
-                            <img src="../Images/images-quiz/group-fantasy.jpeg" alt="group in costume">
+                            <img src="../Images/images-quiz/murta.jpg" alt="Aline and Moaning Myrtle ">
                         </div>
                         <div class="gallery-item">
                             <img src="../Images/images-quiz/halloween-group.jpeg" alt="group in costume for halloween">
