--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -50,19 +50,22 @@
                                 <!-- name -->
                                 <div class="form-group">
                                     <label for="name">Name</label>
-                                    <input type="name" name="name" class="form-control" id="name" placeholder="enter your name" />
+                                    <input type="name" name="name" class="form-control" id="name"
+                                        placeholder="enter your name" />
                                 </div>
 
                                 <!-- email -->
                                 <div class="form-group">
                                     <label for="email">Email address</label>
-                                    <input type="email" name="email" class="form-control" id="email" placeholder="enter your email" />
+                                    <input type="email" name="email" class="form-control" id="email"
+                                        placeholder="enter your email" />
                                 </div>
 
                                 <!-- subject -->
                                 <div class="form-group">
                                     <label for="subject">Subject</label>
-                                    <input type="text" name="subject" class="form-control" id="subject" placeholder="enter email subject" />
+                                    <input type="text" name="subject" class="form-control" id="subject"
+                                        placeholder="enter email subject" />
                                 </div>
 
                                 <div class="form-group">
@@ -77,47 +80,47 @@
                     <section id="contact-devs">
                         <div class="flip-card">
                             <div class="flip-card-inner">
-                              <div class="flip-card-front">
-                                <img src="../Images/Aline.jpg" alt="Photo of Aline">
-                              </div>
-                              <div class="flip-card-back">
-                                <h1>Aline Andrade</h1>
-                                <p>Founding Member</p>
-                                <p>aline.andradecosta@student.griffith.ie</p>
-                                <p><a href="mailto:aline.andradecosta@student.griffith.ie">Contact Us</a></p>
-                              </div>
+                                <div class="flip-card-front">
+                                    <img src="../Images/Aline.jpg" alt="Photo of Aline">
+                                </div>
+                                <div class="flip-card-back">
+                                    <h1>Aline Andrade</h1>
+                                    <p>Founding Member</p>
+                                    <p>aline.andradecosta@student.griffith.ie</p>
+                                    <p><a href="mailto:aline.andradecosta@student.griffith.ie">Contact Us</a></p>
+                                </div>
                             </div>
-                          </div>
-                          <div class="flip-card">
+                        </div>
+                        <div class="flip-card">
                             <div class="flip-card-inner">
-                              <div class="flip-card-front">
-                                <img src="../Images/Eros.jpg" alt="Photo of Eros">
-                              </div>
-                              <div class="flip-card-back">
-                                <h1>Eros Coelho</h1>
-                                <p>Founding Member</p>
-                                <p>eros.limacoelho@student.griffith.ie</p>
-                                <p><a href="mailto:eros.limacoelho@student.griffith.ie">Contact Us</a></p>
-                              </div>
+                                <div class="flip-card-front">
+                                    <img src="../Images/Eros.jpg" alt="Photo of Eros">
+                                </div>
+                                <div class="flip-card-back">
+                                    <h1>Eros Coelho</h1>
+                                    <p>Founding Member</p>
+                                    <p>eros.limacoelho@student.griffith.ie</p>
+                                    <p><a href="mailto:eros.limacoelho@student.griffith.ie">Contact Us</a></p>
+                                </div>
                             </div>
-                          </div>
-                          <div class="flip-card">
+                        </div>
+                        <div class="flip-card">
                             <div class="flip-card-inner">
-                              <div class="flip-card-front">
-                                <img src="../Images/Sergio.jpg" alt="Photo of Sergio">
-                              </div>
-                              <div class="flip-card-back">
-                                <h1>Sergio Alves</h1>
-                                <p>Founding Member</p>
-                                <p>sergio.alvesdasilva@student.griffith.ie</p>
-                                <p><a href="mailto:sergio.alvesdasilva@student.griffith.ie">Contact Us</a></p>
-                              </div>
+                                <div class="flip-card-front">
+                                    <img src="../Images/Sergio.jpg" alt="Photo of Sergio">
+                                </div>
+                                <div class="flip-card-back">
+                                    <h1>Sergio Alves</h1>
+                                    <p>Founding Member</p>
+                                    <p>sergio.alvesdasilva@student.griffith.ie</p>
+                                    <p><a href="mailto:sergio.alvesdasilva@student.griffith.ie">Contact Us</a></p>
+                                </div>
                             </div>
-                          </div>
+                        </div>
                     </section>
                 </main>
             </div>
-           
+
         </div>
 
         <!-- Footer section -->
@@ -126,7 +129,7 @@
             <a href="../Pages/contact.html">&#9993; Contact Us</a>
         </footer>
     </div>
-    
+
     <!-- bootstrap js -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha384-ZvpUoO/+P1c0e+s0B1lb5o86IBQzMwpLPZ8aIk5zn0QFtrrQXNTPd/Gr5e+eB1Rk"
@@ -165,7 +168,6 @@
     </script>
 
     <script src="../JavaScript/script.js"></script>
-    <script src="../JavaScript/contact.js"></script>
 </body>
 
 </html>
