--- a/Pages/TopTen.html
+++ b/Pages/TopTen.html
@@ -42,7 +42,6 @@
                 <section class="about-section">
                     <h2>TOP 10 SCARIEST MOVIES EVER!<br>IF YOU HAVEN'T WATCHED IT, YOU SHOULD!</h2>
                     <div class="about-content">
-                        <h5>By Night Web</h5>
                         <h4>10 - The Conjuring</h4>
                         <img src="../Images/the-conjuring-768x1136.jpg" alt="poster">
                         <a href="https://youtu.be/k10ETZ41q5o?si=84n3mgFAFSRCAGEB" target="_blank"
@@ -98,23 +97,6 @@
                                 Google play,
                                 HBO Max
                             </p>
-
-
-                            <h4>Night Web Rating</h4>
-                            <div class="star-rating">
-                                <input type="radio" id="5-stars" name="rating" value="5">
-                                <label for="5-stars" class="star">&#9733;</label>
-                                <input type="radio" id="4-stars" name="rating" value="4">
-                                <label for="4-stars" class="star">&#9733;</label>
-                                <input type="radio" id="3-stars" name="rating" value="3">
-                                <label for="3-stars" class="star">&#9733;</label>
-                                <input type="radio" id="2-stars" name="rating" value="2">
-                                <label for="2-stars" class="star">&#9733;</label>
-                                <input type="radio" id="1-star" name="rating" value="1">
-                                <label for="1-star" class="star">&#9733;</label>
-                            </div>
-
-
                             <h4>9 - It (The thing) (2017)</h4>
                             <img src="../Images/it2.jpg" alt="poster">
                             <a href="https://youtu.be/xKJmEC5ieOk?si=VJTTi2FybLQHMPrY" target="_blank"
@@ -143,20 +125,6 @@
                                 Available: HBO Max.
                             </p>
 
-                            <h4>Night Web Rating</h4>
-                            <div class="star-rating">
-                                <input type="radio" id="5-stars" name="rating" value="5" />
-                                <label for="5-stars" class="star">&#9733;</label>
-                                <input type="radio" id="4-stars" name="rating" value="4" />
-                                <label for="4-stars" class="star">&#9733;</label>
-                                <input type="radio" id="3-stars" name="rating" value="3" />
-                                <label for="3-stars" class="star">&#9733;</label>
-                                <input type="radio" id="2-stars" name="rating" value="2" />
-                                <label for="2-stars" class="star">&#9733;</label>
-                                <input type="radio" id="1-star" name="rating" value="1" />
-                                <label for="1-star" class="star">&#9733;</label>
-                            </div>
-
                             <h4>8 - His House</h4>
                             <img src="../Images/His_House_.webp" alt="poster">
                             <a href="https://youtu.be/DYY0QJhlXjc?si=yseT_LT807WbHnpr" target="_blank"
@@ -178,20 +146,6 @@
                                 scares.<br>
                                 Available: Netflix.
                             </p>
-
-                            <h4>Night Web Rating</h4>
-                            <div class="star-rating">
-                                <input type="radio" id="5-stars" name="rating" value="5" />
-                                <label for="5-stars" class="star">&#9733;</label>
-                                <input type="radio" id="4-stars" name="rating" value="4" />
-                                <label for="4-stars" class="star">&#9733;</label>
-                                <input type="radio" id="3-stars" name="rating" value="3" />
-                                <label for="3-stars" class="star">&#9733;</label>
-                                <input type="radio" id="2-stars" name="rating" value="2" />
-                                <label for="2-stars" class="star">&#9733;</label>
-                                <input type="radio" id="1-star" name="rating" value="1" />
-                                <label for="1-star" class="star">&#9733;</label>
-                            </div>
 
                             <h4>7 - Insidious Part I and II</h4>
                             <img src="../Images/insidious1.jpg" alt="poster">
@@ -219,20 +173,6 @@
                                 Recommendation: Don't watch it before bed.<br>
                                 Available:Amazon Prime and Digital platforms(Google play).
                             </p>
-
-                            <h4>Night Web Rating</h4>
-                            <div class="star-rating">
-                                <input type="radio" id="5-stars" name="rating" value="5" />
-                                <label for="5-stars" class="star">&#9733;</label>
-                                <input type="radio" id="4-stars" name="rating" value="4" />
-                                <label for="4-stars" class="star">&#9733;</label>
-                                <input type="radio" id="3-stars" name="rating" value="3" />
-                                <label for="3-stars" class="star">&#9733;</label>
-                                <input type="radio" id="2-stars" name="rating" value="2" />
-                                <label for="2-stars" class="star">&#9733;</label>
-                                <input type="radio" id="1-star" name="rating" value="1" />
-                                <label for="1-star" class="star">&#9733;</label>
-                            </div>
 
                             <h4>6 - Drag Me To Hell</h4>
                             <img src="../Images/drag me to hell.jpg" alt="poster">
@@ -266,20 +206,6 @@
 
                             </p>
 
-                            <h4>Night Web Rating</h4>
-                            <div class="star-rating">
-                                <input type="radio" id="5-stars" name="rating" value="5" />
-                                <label for="5-stars" class="star">&#9733;</label>
-                                <input type="radio" id="4-stars" name="rating" value="4" />
-                                <label for="4-stars" class="star">&#9733;</label>
-                                <input type="radio" id="3-stars" name="rating" value="3" />
-                                <label for="3-stars" class="star">&#9733;</label>
-                                <input type="radio" id="2-stars" name="rating" value="2" />
-                                <label for="2-stars" class="star">&#9733;</label>
-                                <input type="radio" id="1-star" name="rating" value="1" />
-                                <label for="1-star" class="star">&#9733;</label>
-                            </div>
-
                             <h4>5 - Evil Dead Rise</h4>
                             <img src="../Images/evil dead rise2.jpg" alt="poster">
                             <a href="https://youtu.be/AQ1hzzWJUYo?si=s4MgLI_hcfpT1V2E" target="_blank"
@@ -307,20 +233,6 @@
                                 Available: HBO Max.
                             </p>
 
-                            <h4>Night Web Rating</h4>
-                            <div class="star-rating">
-                                <input type="radio" id="5-stars" name="rating" value="5" />
-                                <label for="5-stars" class="star">&#9733;</label>
-                                <input type="radio" id="4-stars" name="rating" value="4" />
-                                <label for="4-stars" class="star">&#9733;</label>
-                                <input type="radio" id="3-stars" name="rating" value="3" />
-                                <label for="3-stars" class="star">&#9733;</label>
-                                <input type="radio" id="2-stars" name="rating" value="2" />
-                                <label for="2-stars" class="star">&#9733;</label>
-                                <input type="radio" id="1-star" name="rating" value="1" />
-                                <label for="1-star" class="star">&#9733;</label>
-                            </div>
-
                             <h4>4 - Host</h4>
                             <img src="../Images/host.jpeg" alt="poster">
                             <a href="https://youtu.be/SNlKbqHqGcY?si=E8Isvhc9I5ZBfeTG" target="_blank"
@@ -345,20 +257,6 @@
                                 Recommendation: Don't watch it alone!<br>
                                 Available: Prime video and Apple TV.
                             </p>
-
-                            <h4>Night Web Rating</h4>
-                            <div class="star-rating">
-                                <input type="radio" id="5-stars" name="rating" value="5" />
-                                <label for="5-stars" class="star">&#9733;</label>
-                                <input type="radio" id="4-stars" name="rating" value="4" />
-                                <label for="4-stars" class="star">&#9733;</label>
-                                <input type="radio" id="3-stars" name="rating" value="3" />
-                                <label for="3-stars" class="star">&#9733;</label>
-                                <input type="radio" id="2-stars" name="rating" value="2" />
-                                <label for="2-stars" class="star">&#9733;</label>
-                                <input type="radio" id="1-star" name="rating" value="1" />
-                                <label for="1-star" class="star">&#9733;</label>
-                            </div>
 
                             <h4>3 - Sinister</h4>
                             <img src="../Images/sinister.jpg" alt="poster">
@@ -390,19 +288,6 @@
                                 Available: Amazon Prime video.
                             </p>
 
-                            <h4>Night Web Rating</h4>
-                            <div class="star-rating">
-                                <input type="radio" id="5-stars" name="rating" value="5" />
-                                <label for="5-stars" class="star">&#9733;</label>
-                                <input type="radio" id="4-stars" name="rating" value="4" />
-                                <label for="4-stars" class="star">&#9733;</label>
-                                <input type="radio" id="3-stars" name="rating" value="3" />
-                                <label for="3-stars" class="star">&#9733;</label>
-                                <input type="radio" id="2-stars" name="rating" value="2" />
-                                <label for="2-stars" class="star">&#9733;</label>
-                                <input type="radio" id="1-star" name="rating" value="1" />
-                                <label for="1-star" class="star">&#9733;</label>
-                            </div>
 
                             <h4>2 - Train To Busan</h4>
                             <img src="../Images/train to busan.jpg" alt="poster">
@@ -433,20 +318,6 @@
                                 Available: Netflix.
                             </p>
 
-                            <h4>Night Web Rating</h4>
-                            <div class="star-rating">
-                                <input type="radio" id="5-stars" name="rating" value="5" />
-                                <label for="5-stars" class="star">&#9733;</label>
-                                <input type="radio" id="4-stars" name="rating" value="4" />
-                                <label for="4-stars" class="star">&#9733;</label>
-                                <input type="radio" id="3-stars" name="rating" value="3" />
-                                <label for="3-stars" class="star">&#9733;</label>
-                                <input type="radio" id="2-stars" name="rating" value="2" />
-                                <label for="2-stars" class="star">&#9733;</label>
-                                <input type="radio" id="1-star" name="rating" value="1" />
-                                <label for="1-star" class="star">&#9733;</label>
-                            </div>
-
                             <h4>1 - Hereditary</h4>
 
                             <img src="../Images/hereditary2.jpeg" alt="poster">
@@ -473,22 +344,87 @@
                                 the details.
                                 Available: Amazon Prime.
                             </p>
-
-                            <h4>Night Web Rating</h4>
-                            <div class="star-rating">
-                                <input type="radio" id="5-stars" name="rating" value="5" />
-                                <label for="5-stars" class="star">&#9733;</label>
-                                <input type="radio" id="4-stars" name="rating" value="4" />
-                                <label for="4-stars" class="star">&#9733;</label>
-                                <input type="radio" id="3-stars" name="rating" value="3" />
-                                <label for="3-stars" class="star">&#9733;</label>
-                                <input type="radio" id="2-stars" name="rating" value="2" />
-                                <label for="2-stars" class="star">&#9733;</label>
-                                <input type="radio" id="1-star" name="rating" value="1" />
-                                <label for="1-star" class="star">&#9733;</label>
-                            </div>
+                            <h5>By Night Web</h5>
                         </section>
                     </div>
+                    <section class="rating">
+                        <h2>Do you agree with us?</h2>
+                        <p>Give us your star!</p>
+                        <div class="stars">
+                            <span class="star" data-value="1">&#9733;</span>
+                            <span class="star" data-value="2">&#9733;</span>
+                            <span class="star" data-value="3">&#9733;</span>
+                            <span class="star" data-value="4">&#9733;</span>
+                            <span class="star" data-value="5">&#9733;</span>
+                        </div>
+                        <p id="average-rating">0.0 average based on 0 reviews.</p>
+                        <hr style="border:3px solid #f1f1f1">
+                        <div class="row">
+                            <div class="side">
+                                <div>5 star</div>
+                            </div>
+                            <div class="middle">
+                                <div class="bar-container">
+                                    <div class="bar-star bar-5" style="width: 0%;" id="bar-5"></div>
+                                </div>
+                            </div>
+                            <div class="side right">
+                                <div id="count-5">0</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="side">
+                                <div>4 star</div>
+                            </div>
+                            <div class="middle">
+                                <div class="bar-container">
+                                    <div class="bar-star bar-4" style="width: 0%;" id="bar-4"></div>
+                                </div>
+                            </div>
+                            <div class="side right">
+                                <div id="count-4">0</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="side">
+                                <div>3 star</div>
+                            </div>
+                            <div class="middle">
+                                <div class="bar-container">
+                                    <div class="bar-star bar-3" style="width: 0%;" id="bar-3"></div>
+                                </div>
+                            </div>
+                            <div class="side right">
+                                <div id="count-3">0</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="side">
+                                <div>2 star</div>
+                            </div>
+                            <div class="middle">
+                                <div class="bar-container">
+                                    <div class="bar-star bar-2" style="width: 0%;" id="bar-2"></div>
+                                </div>
+                            </div>
+                            <div class="side right">
+                                <div id="count-2">0</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="side">
+                                <div>1 star</div>
+                            </div>
+                            <div class="middle">
+                                <div class="bar-container">
+                                    <div class="bar-star bar-1" style="width: 0%;" id="bar-1"></div>
+                                </div>
+                            </div>
+                            <div class="side right">
+                                <div id="count-1">0</div>
+                            </div>
+                        </div>
+                    </section>
                 </section>
             </main>
             <button onclick="topFunction()" id="myBottonTop" title="Go to top">Top</button>
@@ -499,6 +435,7 @@
             </footer>
         </div>
         <script src="../JavaScript/script.js"></script>
+        <script src="../JavaScript/top.js"></script>
     </div>
 </body>
 
